# ane-awesome-utils

./: .env.example  .gitignore  README.md  build-all.ps1  build-all.py  build.bat
AndroidNative/: settings.gradle.kts
AndroidNative/app/: build.gradle.kts
AndroidNative/app/src/main/: AndroidManifest.xml
AndroidNative/app/src/main/cpp/: AirIMEGuard.cpp  CMakeLists.txt  CrashSignalHandler.cpp  EmulatorDetection.cpp  Main.cpp  alloc_tracer.cpp  defer_drain.cpp  probe_native.cpp
AndroidNative/app/src/main/cpp/Headers/: EmulatorDetection.hpp
AndroidNative/app/src/main/cpp/Include/: EmulatorData.hpp  FileHelper.hpp
AndroidNative/app/src/main/cpp/profiler/: AndroidAs3ObjectHook.cpp  AndroidAs3ObjectHook.hpp  AndroidAs3RefGraphHook.cpp  AndroidAs3RefGraphHook.hpp  AndroidAs3SamplerHook.cpp  AndroidAs3SamplerHook.hpp  AndroidDeepMemoryHook.cpp  AndroidDeepMemoryHook.hpp  AndroidExperimentHook.cpp  AndroidExperimentHook.hpp  AndroidGcHook.cpp  AndroidGcHook.hpp  AndroidProfilerBridge.cpp  AndroidRenderHook.cpp  AndroidRenderHook.hpp  AndroidRuntimeHook.cpp  AndroidRuntimeHook.hpp  AndroidSamplerHook.cpp  AndroidSamplerHook.hpp
AndroidNative/gradle/: libs.versions.toml
AndroidNative/gradle/wrapper/: gradle-wrapper.properties
AneBuild/: .env  build-mac-csharp.sh  build-windows-csharp.bat  copy-mac-ios-files.bat  deploy-ane-mac-local.bat  extension.xml  package-ane.bat  platformAndroid.xml  platformIOS.xml
AneBuild/macos/AneAwesomeUtils.framework/: AneAwesomeUtils
AneBuild/macos/AneAwesomeUtils.framework/Headers/: AneAwesomeUtils.h
AneBuild/macos/AneAwesomeUtils.framework/Modules/: module.modulemap
AneBuild/macos/AneAwesomeUtils.framework/Resources/: Info.plist
AneBuild/macos/AneAwesomeUtils.framework/_CodeSignature/: CodeResources
AppleNative/AneAwesomeUtils/AneAwesomeUtils/: AneAwesomeUtilsCsharp.h  AneAwesomeUtilsSupport.cpp  DeviceUtils.h  DeviceUtils.m  WebSocketClient.cpp  WebSocketClient.hpp  log.cpp  log.hpp
AppleNative/AneAwesomeUtils/AneAwesomeUtils-IOS/: AneAwesomeUtils_IOS.h  AneAwesomeUtils_IOS.m
AppleNative/AneAwesomeUtils/AneAwesomeUtils.xcodeproj/: project.pbxproj
AppleNative/AneAwesomeUtils/AneAwesomeUtils.xcodeproj/project.xcworkspace/xcuserdata/joaovitorborges.xcuserdatad/: UserInterfaceState.xcuserstate
AppleNative/AneAwesomeUtils/AneAwesomeUtils.xcodeproj/xcshareddata/xcschemes/: AneAwesomeUtils-IOS.xcscheme
AppleNative/AneAwesomeUtils/AneAwesomeUtils.xcodeproj/xcuserdata/joaovitorborges.xcuserdatad/xcschemes/: xcschememanagement.plist
CSharpLibrary/AwesomeAneUtils/: AwesomeAneUtils.sln
CSharpLibrary/AwesomeAneUtils/AwesomeAneUtils/: AsyncLocker.cs  AwesomeAneUtils.csproj  ClientCertificateProvider.cs  CompressUtil.cs  DataArray.cs  DnsInternalResolver.cs  ExportFunctions.cs  HappyEyeballsHttp.cs  HardwareID.cs  IPAddressComparer.cs  IntermediateNode.cs  JsonDictionaryHeaderContext.cs  JsonDnsDoh.cs  LoaderManager.cs  ManualWebSocketClient.cs  PcapStream.cs  VMDetector.cs  WebSocketClient.cs  WebSocketConnectException.cs
CSharpLibrary/AwesomeAneUtils/AwesomeAneUtilsTest/: AwesomeAneUtilsTest.csproj  Program.cs
WindowsNative/: CMakeLists.txt
WindowsNative/inject-test/: CMakeLists.txt  InjectTest.cpp  add_import.py  inject_and_run.py  wrapper_launcher.py
WindowsNative/src/: AneAwesomeUtilsCsharp.cpp  AneAwesomeUtilsCsharp.h  AneAwesomeUtilsSupport.cpp  AudioSafetyHook.cpp  AudioSafetyHook.h  AudioSafetyHookSEH.c  DataArray.h  SamplerSafetyHook.cpp  SamplerSafetyHook.h  WebSocketClient.cpp  WebSocketClient.h  WindowsFilterInputs.cpp  WindowsFilterInputs.h  log.cpp  log.h
WindowsNative/src/profiler/: ProfilerAneBindings.cpp  ProfilerAneBindings.hpp  WindowsAirRuntime.cpp  WindowsAirRuntime.hpp  WindowsAs3ObjectHook.cpp  WindowsAs3ObjectHook.hpp  WindowsDeepMemoryHook.cpp  WindowsDeepMemoryHook.hpp  WindowsDiskMonitor.cpp  WindowsLoopbackListener.cpp  WindowsLoopbackListener.hpp  WindowsRenderHook.cpp  WindowsRenderHook.hpp  WindowsRuntimeHook.cpp  WindowsRuntimeHook.hpp
docs/: PROFILER_IMPLEMENTATION_PLAN.md  PROGRESS.md  dns.md  getting-started.md  http-client.md  logging.md  mtls.md  platform-android.md  platform-windows.md  profiler-deep-aneprof.md  profiler-mode-b-plan-x86-player.md  profiler-mode-b-plan-x86.md  profiler-mode-b-plan.md  profiler-mode-b-sampler-gap.md  profiler-mode-b-x86-status.md  profiler-native-gc.md  profiler-rva-51-1-3-10.md  profiler-rva-android-51-1-3-10.md  profiler-usage.md  utilities.md  websocket.md
shared/profiler/: .gitignore  CMakeLists.txt  build.bat
shared/profiler/include/: AirTelemetryRvas.h  AneprofFormat.hpp  CaptureController.hpp  DeepProfilerController.hpp  FileFormat.hpp  IByteSink.hpp  IDiskMonitor.hpp  IRuntimeHook.hpp  ProfilerFeatures.hpp  PrologueBuffer.hpp  RawFileSink.hpp  SpscByteStream.hpp  TestHarness.hpp  ZlibFileSink.hpp
shared/profiler/poc_win_v1/: CMakeLists.txt  VALIDATION_RESULT.md  build.bat  profiler_poc_hook.cpp  profiler_poc_inject.cpp  run_poc.ps1
shared/profiler/src/: CaptureController.cpp  DeepProfilerController.cpp  RawFileSink.cpp  ZlibFileSink.cpp
shared/profiler/tests/: test_aneprof_controller.cpp  test_capture_controller.cpp  test_file_format.cpp  test_spsc_byte_stream.cpp  test_zlib_file_sink.cpp
shared/profiler/tools/: make_sample_flmc.cpp
src/: AneAwesomeUtils.as  AneAwesomeUtilsInternal.as  AneWebSocket.as  Base64.as
src/aneAwesomeUtils/: Base64.as  ILogging.as  VirtualKeyCodes.as
tests/: .gitignore
tests/profiler-cli/: test_aneprof_analyze.py
tests/profiler-e2e/: VALIDATION_RESULT.md  run_test.ps1
tests/profiler-e2e/app/: TestProfilerApp-app-x86.xml  TestProfilerApp-app.xml  TestProfilerApp.as  build.bat
tests/rva-probe/: VALIDATION_RESULT.md  probe.cdb  run_probe.ps1  tcp_listener.py
tools/ghidra-scripts/: dump_bytes_at.java  find_avm2_natives.java  find_avm2_natives_v2.java  find_avm2_natives_v3.java  find_bl_calls_to.java  find_xrefs_to_addr.java  list_funcs_near.java
tools/profiler-cli/: aneprof_analyze.py  aneprof_validate.py  flmc_replay.py  flmc_validate.py
(+23 files in other folders)
